--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,7 @@
     "@tabler/icons-react": "^3.35.0",
     "@tanstack/react-query": "^5.80.10",
     "@testing-library/dom": "^10.4.1",
+    "ajv": "^8.17.1",
     "audio-feeder": "^0.5.0",
     "axios": "^1.7.2",
     "date-fns": "^4.1.0",
@@ -38,6 +39,7 @@
     "fabric": "^6.7.1",
     "html2canvas": "^1.4.1",
     "lucide-react": "^0.292.0",
+    "openai": "^6.7.0",
     "react": "^18.2.0",
     "react-diff-viewer-continued": "^3.4.0",
     "react-dom": "^18.2.0",
