tests and fixes

--- a/nginx.conf
+++ b/nginx.conf
@@ -160,6 +160,56 @@ http {
             proxy_set_header Cookie $http_cookie;
         }
 
+        # Safari audio streaming endpoint - specific handling for /v1/audio/speech/stream/
+        # This endpoint is used by Safari's audio element and requires different headers than SSE
+        # No auth_request needed - stream IDs are random and expire, providing security
+        location ~ ^/v1/audio/speech/stream/ {
+            include /etc/nginx/snippets/ratelimit-tts.inc;
+            include /etc/nginx/snippets/security-headers-api.inc;
+
+            # Proxy to TTS service - nginx will preserve full URI automatically
+            proxy_pass http://tts:5050;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header Cookie $http_cookie;
+
+            # Audio streaming support (not SSE)
+            proxy_http_version 1.1;
+            proxy_buffering off;
+            proxy_cache off;
+            proxy_read_timeout 3600s;
+            proxy_connect_timeout 10s;
+            proxy_send_timeout 3600s;
+            add_header X-Accel-Buffering no always;
+
+            # Safari requires Accept-Ranges for audio streaming
+            add_header Accept-Ranges bytes always;
+
+            # Forward Range requests properly for Safari audio element
+            proxy_set_header Range $http_range;
+            proxy_set_header If-Range $http_if_range;
+
+            # CORS headers for TTS
+            add_header Access-Control-Allow-Origin $http_origin always;
+            add_header Access-Control-Allow-Methods "GET, OPTIONS" always;
+            add_header Access-Control-Allow-Headers "Content-Type, Authorization, Range" always;
+            add_header Access-Control-Allow-Credentials "true" always;
+            add_header Access-Control-Expose-Headers "Content-Range, Content-Length, Accept-Ranges" always;
+
+            # Handle preflight requests
+            if ($request_method = 'OPTIONS') {
+                add_header Access-Control-Allow-Origin $http_origin always;
+                add_header Access-Control-Allow-Methods "GET, OPTIONS" always;
+                add_header Access-Control-Allow-Headers "Content-Type, Authorization, Range" always;
+                add_header Access-Control-Allow-Credentials "true" always;
+                add_header Content-Type "text/plain charset=UTF-8";
+                add_header Content-Length 0;
+                return 204;
+            }
+        }
+
         # TTS endpoints with authentication validation
         location /v1/audio/ {
             auth_request /auth/check;
@@ -172,14 +222,11 @@ http {
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
             proxy_set_header Cookie $http_cookie;
-            # TTS service is setup to not require API key
 
-            # SSE streaming support
-            proxy_set_header Connection '';
+            # Streaming support
             proxy_http_version 1.1;
             proxy_buffering off;
             proxy_cache off;
-            proxy_set_header Accept text/event-stream;
             add_header X-Accel-Buffering no always;
             proxy_read_timeout 3600s;
 
