--- a/backend/.golangci.yml
+++ b/backend/.golangci.yml
@@ -15,8 +15,5 @@ linters:
     - revive
   settings:
     govet:
-      settings:
-        printf:
-          funcs:
-            - quizapp/internal/utils.WrapErrorf
-            - contextutils.WrapErrorf
+      disable:
+        - printf
