--- a/nginx.conf
+++ b/nginx.conf
@@ -46,6 +46,16 @@ http {
         include /etc/nginx/snippets/security-headers.inc;
 
         # Define valid SPA routes
+        location = /word-of-day/embed {
+            include /etc/nginx/snippets/ratelimit-default.inc;
+            include /etc/nginx/snippets/security-headers.inc;
+            root /usr/share/nginx/html;
+            try_files /index.html =404;
+
+            add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'nonce-rQv5+fXKpPEe2rqY+4/HDw==' https://tts.rocks; style-src 'self' 'unsafe-inline'; font-src 'self'; img-src 'self' data:; connect-src 'self' http://localhost:8080 https://translation.googleapis.com; media-src 'self' blob: data:; frame-ancestors *; form-action 'self';" always;
+            add_header X-Frame-Options "" always;
+        }
+
         location ~ ^/(login|signup|quiz|vocabulary|reading-comprehension|progress|settings|oauth-callback|admin|daily|story|conversations|ai|bookmarks|snippets|phrasebook|verb-conjugation|word-of-day)(/.*)?$ {
             include /etc/nginx/snippets/ratelimit-default.inc;
             include /etc/nginx/snippets/security-headers.inc;
