--- a/nginx.conf
+++ b/nginx.conf
@@ -52,7 +52,10 @@ http {
             root /usr/share/nginx/html;
             try_files /index.html =404;
 
-            add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'nonce-rQv5+fXKpPEe2rqY+4/HDw==' https://tts.rocks; style-src 'self' 'unsafe-inline'; font-src 'self'; img-src 'self' data:; connect-src 'self' http://localhost:8080 https://translation.googleapis.com; media-src 'self' blob: data:; frame-ancestors *; form-action 'self';" always;
+            rewrite_by_lua_block {
+                ngx.req.clear_header("Content-Security-Policy")
+                ngx.req.set_header("Content-Security-Policy", "default-src 'self'; script-src 'self' 'nonce-rQv5+fXKpPEe2rqY+4/HDw=='; style-src 'self' 'unsafe-inline'; font-src 'self'; img-src 'self' data:; connect-src 'self' http://localhost:8080 https://translation.googleapis.com; media-src 'self' blob: data:; frame-ancestors *; form-action 'self';")
+            }
             add_header X-Frame-Options "" always;
         }
 
