--- a/nginx.conf
+++ b/nginx.conf
@@ -36,6 +36,7 @@ http {
     limit_req_zone $binary_remote_addr zone=tts_limit:10m rate=5r/s;
     limit_req_zone $binary_remote_addr zone=translate_limit:10m rate=5r/s;
 
+
     server {
         listen 80;
 
@@ -48,14 +49,11 @@ http {
         # Define valid SPA routes
         location = /word-of-day/embed {
             include /etc/nginx/snippets/ratelimit-default.inc;
-            include /etc/nginx/snippets/security-headers.inc;
+            # include /etc/nginx/snippets/security-headers.inc;
             root /usr/share/nginx/html;
             try_files /index.html =404;
 
-            rewrite_by_lua_block {
-                ngx.req.clear_header("Content-Security-Policy")
-                ngx.req.set_header("Content-Security-Policy", "default-src 'self'; script-src 'self' 'nonce-rQv5+fXKpPEe2rqY+4/HDw=='; style-src 'self' 'unsafe-inline'; font-src 'self'; img-src 'self' data:; connect-src 'self' http://localhost:8080 https://translation.googleapis.com; media-src 'self' blob: data:; frame-ancestors *; form-action 'self';")
-            }
+            add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'nonce-rQv5+fXKpPEe2rqY+4/HDw=='; style-src 'self' 'unsafe-inline'; font-src 'self'; img-src 'self' data:; connect-src 'self' http://localhost:8080 https://translation.googleapis.com; media-src 'self' blob: data:; frame-ancestors *; form-action 'self';" always;
             add_header X-Frame-Options "" always;
         }
 
