--- a/nginx.conf
+++ b/nginx.conf
@@ -49,12 +49,27 @@ http {
         # Define valid SPA routes
         location = /word-of-day/embed {
             include /etc/nginx/snippets/ratelimit-default.inc;
+            # it's too hard to overwrite specific headers...
             # include /etc/nginx/snippets/security-headers.inc;
             root /usr/share/nginx/html;
             try_files /index.html =404;
 
+            # add x-frame-options header for additional clickjacking protection
+            add_header x-frame-options "" always;
+
+            add_header x-content-type-options "nosniff" always;
+            add_header x-xss-protection "1; mode=block" always;
+            add_header referrer-policy "strict-origin-when-cross-origin" always;
+
+            # cross-origin headers for spectre protection
+            add_header cross-origin-resource-policy "same-origin" always;
+            add_header cross-origin-embedder-policy "unsafe-none" always;
+            add_header cross-origin-opener-policy "same-origin" always;
+
+            # cache control - 4 hour max age for static assets
+            add_header cache-control "public, max-age=14400" always;
+
             add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'nonce-rQv5+fXKpPEe2rqY+4/HDw=='; style-src 'self' 'unsafe-inline'; font-src 'self'; img-src 'self' data:; connect-src 'self' http://localhost:8080 https://translation.googleapis.com; media-src 'self' blob: data:; frame-ancestors *; form-action 'self';" always;
-            add_header X-Frame-Options "" always;
         }
 
         location ~ ^/(login|signup|quiz|vocabulary|reading-comprehension|progress|settings|oauth-callback|admin|daily|story|conversations|ai|bookmarks|snippets|phrasebook|verb-conjugation|word-of-day)(/.*)?$ {
