--- a/nginx.conf
+++ b/nginx.conf
@@ -54,9 +54,6 @@ http {
             root /usr/share/nginx/html;
             try_files /index.html =404;
 
-            # add x-frame-options header for additional clickjacking protection
-            add_header x-frame-options "" always;
-
             add_header x-content-type-options "nosniff" always;
             add_header x-xss-protection "1; mode=block" always;
             add_header referrer-policy "strict-origin-when-cross-origin" always;
@@ -69,6 +66,7 @@ http {
             # cache control - 4 hour max age for static assets
             add_header cache-control "public, max-age=14400" always;
 
+            # This is here for: 'frame-ancestors *' to allow embedding...
             add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'nonce-rQv5+fXKpPEe2rqY+4/HDw=='; style-src 'self' 'unsafe-inline'; font-src 'self'; img-src 'self' data:; connect-src 'self' http://localhost:8080 https://translation.googleapis.com; media-src 'self' blob: data:; frame-ancestors *; form-action 'self';" always;
         }
 
