--- a/nginx.conf
+++ b/nginx.conf
@@ -49,21 +49,27 @@ http {
         # Define valid SPA routes
         location = /word-of-day/embed {
             include /etc/nginx/snippets/ratelimit-default.inc;
-            # it's too hard to overwrite specific headers...
-            # include /etc/nginx/snippets/security-headers.inc;
-            root /usr/share/nginx/html;
-            try_files /index.html =404;
+            include /etc/nginx/snippets/security-headers-api.inc;
+
+            proxy_pass http://backend:8080/v1/word-of-day/embed;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header Cookie $http_cookie;
+
+            proxy_http_version 1.1;
+            proxy_set_header Connection '';
+            proxy_buffering off;
 
             add_header x-content-type-options "nosniff" always;
             add_header x-xss-protection "1; mode=block" always;
             add_header referrer-policy "strict-origin-when-cross-origin" always;
 
-            # cross-origin headers for spectre protection
             add_header cross-origin-resource-policy "same-origin" always;
             add_header cross-origin-embedder-policy "unsafe-none" always;
             add_header cross-origin-opener-policy "same-origin" always;
 
-            # cache control - 4 hour max age for static assets
             add_header cache-control "public, max-age=14400" always;
 
             # This is here for: 'frame-ancestors *' to allow embedding...
