--- a/nginx.conf
+++ b/nginx.conf
@@ -49,7 +49,7 @@ http {
         # Define valid SPA routes
         location = /word-of-day/embed {
             include /etc/nginx/snippets/ratelimit-default.inc;
-            include /etc/nginx/snippets/security-headers-api.inc;
+            # include /etc/nginx/snippets/security-headers-api.inc;
 
             proxy_pass http://backend:8080/v1/word-of-day/embed;
             proxy_set_header Host $host;
