--- a/Dockerfile.backend
+++ b/Dockerfile.backend
@@ -37,7 +37,8 @@ RUN --mount=type=cache,id=quiz-backend-gomod,sharing=locked,target=/go/pkg/mod \
     go build \
     -a \
     -installsuffix cgo \
-    -ldflags="-w -s -X 'quizapp/internal/version.Version=$APP_VERSION' -X 'quizapp/internal/version.Commit=$COMMIT_HASH' -X 'quizapp/internal/version.BuildTime=$BUILD_TIME'" \
+    # remove -w -s to keep symbols for ebpf
+    -ldflags="-X 'quizapp/internal/version.Version=$APP_VERSION' -X 'quizapp/internal/version.Commit=$COMMIT_HASH' -X 'quizapp/internal/version.BuildTime=$BUILD_TIME'" \
     -o /app/quiz-app \
     ./cmd/server
 
