--- a/nginx.conf
+++ b/nginx.conf
@@ -387,6 +387,6 @@ http {
         endpoint otel-collector:4317;
     }
     otel_trace on;
-    otel_service_name nginx-quiz;
+    otel_service_name quiz-nginx;
     otel_trace_context propagate;
 }
