fix health check

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -162,7 +162,7 @@ services:
     env_file:
       - .env
     healthcheck:
-      test: ["CMD", "sh", "-c", "curl -f http://localhost/health"]
+      test: ["CMD", "sh", "-c", "curl -f http://localhost:8066/health"]
       interval: 10s
       timeout: 5s
       retries: 5
