--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -197,7 +197,7 @@ services:
       backend:
         condition: service_healthy
     healthcheck:
-      test: ["CMD", "sh", "-c", "curl -f http://localhost:/health"]
+      test: ["CMD", "sh", "-c", "curl -f http://localhost:8066/health"]
       interval: 10s
       timeout: 5s
       retries: 5
