--- a/nginx.conf
+++ b/nginx.conf
@@ -76,7 +76,7 @@ http {
             add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'nonce-rQv5+fXKpPEe2rqY+4/HDw=='; style-src 'self' 'unsafe-inline'; font-src 'self'; img-src 'self' data:; connect-src 'self' http://localhost:8080 https://translation.googleapis.com; media-src 'self' blob: data:; frame-ancestors *; form-action 'self';" always;
         }
 
-        location ~ ^/(login|signup|quiz|vocabulary|reading-comprehension|progress|settings|oauth-callback|admin|daily|story|conversations|ai|bookmarks|snippets|phrasebook|verb-conjugation|word-of-day)(/.*)?$ {
+        location ~ ^/(login|signup|quiz|vocabulary|reading-comprehension|progress|settings|oauth-callback|admin|daily|story|conversations|ai|bookmarks|snippets|phrasebook|verb-conjugation|word-of-day|translation-practice)(/.*)?$ {
             include /etc/nginx/snippets/ratelimit-default.inc;
             include /etc/nginx/snippets/security-headers.inc;
             root /usr/share/nginx/html;
