--- a/Dockerfile.frontend
+++ b/Dockerfile.frontend
@@ -2,11 +2,11 @@
 # Stage 1: Font Generation Stage (cached separately)
 FROM --platform=$BUILDPLATFORM node:22-alpine AS font-generator
 
-WORKDIR /app
+WORKDIR /build
+
 
 # Install python3 for font script with retry logic
-RUN --mount=type=cache,id=quiz-frontend-apk,sharing=locked,target=/var/cache/apk \
-    apk update && apk add --no-progress python3
+RUN apk update && apk add --no-progress python3 ca-certificates tzdata
 
 # Copy font self-hosting script
 COPY scripts/self_host_fonts.py ./
@@ -28,35 +28,25 @@ RUN python3 self_host_fonts.py
 # Stage 2: Dependencies (cached separately)
 FROM --platform=$BUILDPLATFORM node:22-alpine AS deps
 
-WORKDIR /app
+WORKDIR /build
 
 # Copy package files first
 COPY frontend/package.json frontend/package-lock.json ./
 
 # Install dependencies with cache mount
-RUN --mount=type=cache,id=quiz-frontend-npm,sharing=locked,target=/root/.npm \
-    npm ci --no-audit --no-fund --prefer-offline --legacy-peer-deps
+RUN npm ci --no-audit --no-fund --prefer-offline --legacy-peer-deps
 
 # Stage 3: Build the React app
 FROM --platform=$BUILDPLATFORM node:22-alpine AS builder
 
+RUN adduser -D -g '' appuser
 # Add build arguments for better caching
 ARG BUILDKIT_INLINE_CACHE=1
-# Add build arguments for versioning
-ARG APP_VERSION=dev
-ARG COMMIT_HASH=dev
-ARG BUILD_TIME=unknown
-ARG VITE_GOOGLE_TRANSLATE_API_KEY
 
-ENV VITE_APP_VERSION=$APP_VERSION
-ENV VITE_COMMIT_HASH=$COMMIT_HASH
-ENV VITE_BUILD_TIME=$BUILD_TIME
-ENV VITE_GOOGLE_TRANSLATE_API_KEY=$VITE_GOOGLE_TRANSLATE_API_KEY
-
-WORKDIR /app
+WORKDIR /build
 
 # Copy dependencies from deps stage
-COPY --from=deps /app/node_modules ./node_modules
+COPY --from=deps /build/node_modules ./node_modules
 
 # Copy package files for npm scripts
 COPY frontend/package.json frontend/package-lock.json ./
@@ -73,22 +63,33 @@ COPY frontend/tsconfig.node.json ./
 COPY frontend/scripts ./scripts
 
 # Copy pre-generated fonts from font-generator stage
-COPY --from=font-generator /app/frontend/public/fonts ./public/fonts
-COPY --from=font-generator /app/src/fonts.css ./src/fonts.css
+COPY --from=font-generator /build/frontend/public/fonts ./public/fonts
+COPY --from=font-generator /build/src/fonts.css ./src/fonts.css
 
 # Copy phrasebook index generation script to parent directory (will run automatically via npm prebuild)
 COPY scripts/generate-phrasebook-index.js ../scripts/
 
-# Build the app with cache mounts for Vite and esbuild
-RUN --mount=type=cache,id=quiz-frontend-vite,sharing=locked,target=/app/node_modules/.vite \
-    --mount=type=cache,id=quiz-frontend-esbuild,sharing=locked,target=/root/.cache/esbuild \
+ARG APP_VERSION=dev
+ARG COMMIT_HASH=dev
+ARG BUILD_TIME=unknown
+ARG VITE_GOOGLE_TRANSLATE_API_KEY
+
+ENV VITE_APP_VERSION=$APP_VERSION
+ENV VITE_COMMIT_HASH=$COMMIT_HASH
+ENV VITE_BUILD_TIME=$BUILD_TIME
+ENV VITE_GOOGLE_TRANSLATE_API_KEY=$VITE_GOOGLE_TRANSLATE_API_KEY
+
+RUN --mount=type=cache,target=/build/.vite \
+    --mount=type=cache,target=/build/node_modules/.cache \
+    --mount=type=cache,target=/build/node_modules/.vite \
+    --mount=type=cache,target=/root/.cache \
     INLINE_RUNTIME_CHUNK=false npm run build
 
 # --- CSP Nonce Automation (separate stage) ---
 FROM python:3.12-alpine AS nonce
-WORKDIR /app
+WORKDIR /build
 # Copy built assets from builder
-COPY --from=builder /app/dist ./dist
+COPY --from=builder /build/dist ./dist
 # Copy nonce scripts and nginx config from repo context
 COPY scripts/add_nonces_to_built_html.py ./
 COPY scripts/inject_csp_nonce.py ./
@@ -101,13 +102,12 @@ RUN python3 inject_csp_nonce.py
 # Stage 4: Serve the app with official NGINX (with OpenTelemetry support)
 FROM nginx:stable-otel AS nginx-base
 
-# Install wget without updating package lists (faster and avoids security issues)
-# RUN apt-get install -y --no-install-recommends wget && rm -rf /var/lib/apt/lists/*
+COPY --from=builder /etc/passwd /etc/passwd
 
 # Copy the built app from the nonce stage (after CSP nonce processing)
-COPY --from=nonce /app/dist /usr/share/nginx/html
+COPY --from=nonce /build/dist /usr/share/nginx/html
 # Copy the self-hosted fonts
-COPY --from=builder /app/public/fonts /usr/share/nginx/html/fonts
+COPY --from=builder /build/public/fonts /usr/share/nginx/html/fonts
 
 # Fix permissions for nginx to serve static assets
 RUN chmod -R 644 /usr/share/nginx/html/assets/* /usr/share/nginx/html/*.svg /usr/share/nginx/html/fonts/* && \
@@ -115,9 +115,9 @@ RUN chmod -R 644 /usr/share/nginx/html/assets/* /usr/share/nginx/html/*.svg /usr
     find /usr/share/nginx/html -type d -exec chmod 755 {} \;
 
 # Copy the nginx configuration
-COPY --from=nonce /app/nginx.conf /etc/nginx/nginx.conf
+COPY --from=nonce /build/nginx.conf /etc/nginx/nginx.conf
 # Copy rate-limit snippet includes (enabled by default)
-COPY --from=nonce /app/nginx/snippets/on/ /etc/nginx/snippets/
+COPY --from=nonce /build/nginx/snippets/on/ /etc/nginx/snippets/
 
 EXPOSE 8066
 
