--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -999,7 +999,6 @@ tasks:
 
   restart-dev:
     desc: "Restart development instance (preserves data)"
-    deps: [setup-cache-dirs]
     env:
       DOCKER_BUILDKIT: 1
       COMPOSE_DOCKER_CLI_BUILD: 1
@@ -1123,14 +1122,6 @@ tasks:
       - rm -rf /tmp/.buildx-cache-frontend /tmp/.buildx-cache-worker || true
       - docker builder prune -f
       - echo "✅ Build cache cleaned!"
-
-  setup-cache-dirs:
-    desc: "Set up cache directories with proper permissions"
-    cmds:
-      - echo "🔧 Setting up cache directories..."
-      - mkdir -p /tmp/.buildx-cache /tmp/.buildx-cache-frontend /tmp/.buildx-cache-worker /tmp/.buildx-cache-backend
-      - chmod 755 /tmp/.buildx-cache /tmp/.buildx-cache-frontend /tmp/.buildx-cache-worker /tmp/.buildx-cache-backend
-      - echo "✅ Cache directories created with proper permissions"
 
   setup-buildx:
     desc: "Ensure Docker Buildx builder exists and is used"
@@ -1454,7 +1445,7 @@ tasks:
 
   restart-dev-backend:
     desc: "Rebuild and restart only the backend Docker container (production)"
-    deps: [build-backend-with-version, setup-cache-dirs, generate-api-types]
+    deps: [build-backend-with-version, generate-api-types]
     env:
       DOCKER_BUILDKIT: 1
       COMPOSE_DOCKER_CLI_BUILD: 1
@@ -1467,7 +1458,7 @@ tasks:
 
   restart-dev-worker:
     desc: "Rebuild and restart only the worker Docker container (production)"
-    deps: [build-backend-with-version, setup-cache-dirs, generate-api-types]
+    deps: [build-backend-with-version, generate-api-types]
     env:
       DOCKER_BUILDKIT: 1
       COMPOSE_DOCKER_CLI_BUILD: 1
@@ -1483,7 +1474,6 @@ tasks:
     deps:
       [
         build-frontend-with-version,
-        setup-cache-dirs,
         generate-api-types,
         generate-phrasebook-index,
       ]
@@ -1626,7 +1616,7 @@ tasks:
   # All Scripts
   release-build:
     desc: "Build Docker images for the next semantic tag"
-    deps: [setup-cache-dirs, setup-buildx, merge-config]
+    deps: [setup-buildx, merge-config]
     env:
       DOCKER_BUILDKIT: 1
       DOCKER_BUILDKIT_NO_PROVENANCE: 1
@@ -1672,7 +1662,7 @@ tasks:
 
   build-all-with-version:
     desc: "Build all Docker images with version, commit, and build time injected from git."
-    deps: [setup-cache-dirs, generate-phrasebook-index]
+    deps: [generate-phrasebook-index]
     env:
       DOCKER_BUILDKIT: 1
       COMPOSE_DOCKER_CLI_BUILD: 1
@@ -1705,7 +1695,7 @@ tasks:
 
   build-frontend-with-version:
     desc: "Build frontend Docker images with version, commit, and build time injected from git."
-    deps: [setup-cache-dirs, generate-phrasebook-index]
+    deps: [generate-phrasebook-index]
     env:
       DOCKER_BUILDKIT: 1
       COMPOSE_DOCKER_CLI_BUILD: 1
@@ -1737,7 +1727,6 @@ tasks:
 
   build-backend-with-version:
     desc: "Build backend Docker images with version, commit, and build time injected from git."
-    deps: [setup-cache-dirs]
     env:
       DOCKER_BUILDKIT: 1
       COMPOSE_DOCKER_CLI_BUILD: 1
@@ -1749,12 +1738,7 @@ tasks:
         export COMMIT_HASH=$(git rev-parse --short HEAD)
         export BUILD_TIME=$(date -u +"%Y-%m-%dT%H:%M:%SZ")
         echo "Building with version: $APP_VERSION, commit: $COMMIT_HASH, build time: $BUILD_TIME"
-        # Create cache directories with proper permissions
-        mkdir -p /tmp/.buildx-cache /tmp/.buildx-cache-worker
-        chmod 755 /tmp/.buildx-cache /tmp/.buildx-cache-worker
         echo "Building Docker images (cache export disabled)..."
-        # Temporarily disable cache export by setting empty cache_to
-        export BUILDKIT_CACHE_TO=""
         TARGETARCH="$(uname -m)"
         case "$TARGETARCH" in
           x86_64|x86-64|x64)
