--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -139,7 +139,7 @@ services:
           "CMD",
           "sh",
           "-c",
-          "curl -f http://localhost:${SERVER_WORKER_PORT:-8081}/v1/health",
+          "curl -f http://localhost:${SERVER_WORKER_PORT:-8081}/v1/health || wget --quiet --tries=1 --spider http://localhost:${SERVER_WORKER_PORT:-8081}/v1/health",
         ]
       interval: 10s
       timeout: 5s
