--- a/docker-compose.test.from.images.yml
+++ b/docker-compose.test.from.images.yml
@@ -112,7 +112,13 @@ services:
       - OPEN_TELEMETRY_SAMPLING_RATE=${OPEN_TELEMETRY_SAMPLING_RATE:-1.0}
       - OTEL_SEMCONV_STABILITY_OPT_IN=http/dup
     healthcheck:
-      test: ["CMD", "sh", "-c", "curl -f http://localhost:8081/v1/health"]
+      test:
+        [
+          "CMD",
+          "sh",
+          "-c",
+          "curl -f http://localhost:8081/v1/health || wget --quiet --tries=1 --spider http://localhost:8081/v1/health",
+        ]
       interval: 10s
       timeout: 5s
       retries: 5
