--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -116,7 +116,13 @@ services:
       - OPEN_TELEMETRY_SAMPLING_RATE=${OPEN_TELEMETRY_SAMPLING_RATE:-1.0}
       - OTEL_SEMCONV_STABILITY_OPT_IN=http/dup
     healthcheck:
-      test: ["CMD", "sh", "-c", "curl -f http://localhost:8081/v1/health"]
+      test:
+        [
+          "CMD",
+          "sh",
+          "-c",
+          "curl -f http://localhost${SERVER_WORKER_PORT:-8081}:/v1/health || wget --quiet --tries=1 --spider http://localhost:${SERVER_WORKER_PORT:-8081}/v1/health",
+        ]
       interval: 10s
       timeout: 5s
       retries: 5
