--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,10 +33,6 @@ services:
         APP_VERSION: ${APP_VERSION}
         COMMIT_HASH: ${COMMIT_HASH}
         BUILD_TIME: ${BUILD_TIME}
-      cache_from:
-        - type=local,src=/tmp/.buildx-cache-backend
-      # cache_to:
-      #   - type=local,dest=/tmp/.buildx-cache-backend-new,mode=max
       x-bake:
         provenance: false
     ports:
@@ -114,10 +110,6 @@ services:
         APP_VERSION: ${APP_VERSION}
         COMMIT_HASH: ${COMMIT_HASH}
         BUILD_TIME: ${BUILD_TIME}
-      cache_from:
-        - type=local,src=/tmp/.buildx-cache-worker
-      # cache_to:
-      #   - type=local,dest=/tmp/.buildx-cache-worker-new,mode=max
     ports:
       - 8181:8081
     env_file:
@@ -162,7 +154,7 @@ services:
           "CMD",
           "sh",
           "-c",
-          "curl -f http://localhost:${SERVER_WORKER_PORT:-8081}/v1/health",
+          "curl -f http://localhost${SERVER_WORKER_PORT:-8081}:/v1/health || wget --quiet --tries=1 --spider http://localhost:${SERVER_WORKER_PORT:-8081}/v1/health",
         ]
       interval: 10s
       timeout: 5s
