disable auto sdk with config

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -62,6 +62,7 @@ services:
       - OPEN_TELEMETRY_ENABLE_METRICS=${OPEN_TELEMETRY_ENABLE_METRICS:-true}
       - OPEN_TELEMETRY_ENABLE_LOGGING=${OPEN_TELEMETRY_ENABLE_LOGGING:-true}
       - OPEN_TELEMETRY_SAMPLING_RATE=${OPEN_TELEMETRY_SAMPLING_RATE:-1.0}
+      - OPEN_TELEMETRY_USE_AUTO_SDK=${OPEN_TELEMETRY_USE_AUTO_SDK:-true}
       - SWAGGER_FILE_PATH=/app/swagger.yaml
       - EMAIL_ENABLED=${EMAIL_ENABLED:-true}
       - EMAIL_SMTP_HOST=${EMAIL_SMTP_HOST:-smtp.email.us-chicago-1.oci.oraclecloud.com}
@@ -123,6 +124,7 @@ services:
       - OPEN_TELEMETRY_ENABLE_METRICS=${OPEN_TELEMETRY_ENABLE_METRICS:-true}
       - OPEN_TELEMETRY_ENABLE_LOGGING=${OPEN_TELEMETRY_ENABLE_LOGGING:-true}
       - OPEN_TELEMETRY_SAMPLING_RATE=${OPEN_TELEMETRY_SAMPLING_RATE:-1.0}
+      - OPEN_TELEMETRY_USE_AUTO_SDK=${OPEN_TELEMETRY_USE_AUTO_SDK:-false}
       - EMAIL_ENABLED=${EMAIL_ENABLED:-true}
       - EMAIL_SMTP_HOST=${EMAIL_SMTP_HOST:-smtp.email.us-chicago-1.oci.oraclecloud.com}
       - EMAIL_SMTP_PORT=${EMAIL_SMTP_PORT:-587}
