--- a/config.yaml
+++ b/config.yaml
@@ -196,6 +196,7 @@ open_telemetry:
   enable_metrics: true
   enable_logging: true
   sampling_rate: 1.0
+  use_auto_sdk: true  # Default: true (use Auto SDK, set to false for standard SDK)
 
 system:
   auth:
