otel attributes cleanup

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -9,6 +9,7 @@ services:
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD:-quiz_password}
       - POSTGRES_HOST_AUTH_METHOD=trust
       - OTEL_SERVICE_NAME=quiz-postgres
+      - OTEL_SERVICE_VERSION=${OPEN_TELEMETRY_SERVICE_VERSION:-${APP_VERSION:-prod}}
     ports:
       - "5432:5432"
     restart: unless-stopped
@@ -55,7 +56,6 @@ services:
       - MIGRATIONS_PATH=file:///app/migrations
       - OPEN_TELEMETRY_ENDPOINT=${OPEN_TELEMETRY_ENDPOINT:-otel-collector:4317}
       - OPEN_TELEMETRY_SERVICE_NAME=${OPEN_TELEMETRY_SERVICE_NAME:-quiz-backend}
-      - OPEN_TELEMETRY_SERVICE_VERSION=${OPEN_TELEMETRY_SERVICE_VERSION:-${APP_VERSION:-prod}}
       - OPEN_TELEMETRY_PROTOCOL=${OPEN_TELEMETRY_PROTOCOL:-grpc}
       - OPEN_TELEMETRY_INSECURE=${OPEN_TELEMETRY_INSECURE:-true}
       - OPEN_TELEMETRY_ENABLE_TRACING=${OPEN_TELEMETRY_ENABLE_TRACING:-true}
@@ -76,6 +76,7 @@ services:
       - OTEL_SEMCONV_STABILITY_OPT_IN=http/dup
       - SERVER_APP_BASE_URL=${SERVER_APP_BASE_URL:-http://localhost:3000}
       - OTEL_SERVICE_NAME=quiz-backend
+      - OTEL_SERVICE_VERSION=${OPEN_TELEMETRY_SERVICE_VERSION:-${APP_VERSION:-prod}}
       - OTEL_EXPORTER_OTLP_TRACES_ENDPOINT=${OPEN_TELEMETRY_ENDPOINT:-otel-collector:4317}
     healthcheck:
       test:
@@ -117,7 +118,6 @@ services:
       - MIGRATIONS_PATH=file:///app/migrations
       - OPEN_TELEMETRY_ENDPOINT=${OPEN_TELEMETRY_ENDPOINT:-otel-collector:4317}
       - OPEN_TELEMETRY_SERVICE_NAME=${OPEN_TELEMETRY_SERVICE_NAME:-quiz-worker}
-      - OPEN_TELEMETRY_SERVICE_VERSION=${OPEN_TELEMETRY_SERVICE_VERSION:-${APP_VERSION:-prod}}
       - OPEN_TELEMETRY_PROTOCOL=${OPEN_TELEMETRY_PROTOCOL:-grpc}
       - OPEN_TELEMETRY_INSECURE=${OPEN_TELEMETRY_INSECURE:-true}
       - OPEN_TELEMETRY_ENABLE_TRACING=${OPEN_TELEMETRY_ENABLE_TRACING:-true}
@@ -136,6 +136,7 @@ services:
       - EMAIL_DAILY_REMINDER_HOUR=${EMAIL_DAILY_REMINDER_HOUR:-9}
       - OTEL_SEMCONV_STABILITY_OPT_IN=http/dup
       - OTEL_SERVICE_NAME=quiz-worker
+      - OTEL_SERVICE_VERSION=${OPEN_TELEMETRY_SERVICE_VERSION:-${APP_VERSION:-prod}}
       - OTEL_EXPORTER_OTLP_TRACES_ENDPOINT=${OPEN_TELEMETRY_ENDPOINT:-otel-collector:4317}
     healthcheck:
       test:
@@ -163,6 +164,7 @@ services:
     restart: unless-stopped
     environment:
       OTEL_SERVICE_NAME: "quiz-nginx"
+      OTEL_SERVICE_VERSION: ${OPEN_TELEMETRY_SERVICE_VERSION:-${APP_VERSION:-prod}}
     env_file:
       - .env
     healthcheck:
@@ -209,6 +211,7 @@ services:
       DETAILED_ERROR_LOGGING: ${TTS_DETAILED_ERROR_LOGGING:-True}
       DEBUG_STREAMING: ${DEBUG_STREAMING:-false}
       OTEL_SERVICE_NAME: "quiz-tts"
+      OTEL_SERVICE_VERSION: ${OPEN_TELEMETRY_SERVICE_VERSION:-${APP_VERSION:-prod}}
       OTEL_TRACES_EXPORTER: "otlp"
       OTEL_METRICS_EXPORTER: "otlp"
       OTEL_EXPORTER_OTLP_TRACES_ENDPOINT: ${OPEN_TELEMETRY_ENDPOINT:-otel-collector:4317}
