--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,8 @@ services:
       - POSTGRES_USER=${POSTGRES_USER:-quiz_user}
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD:-quiz_password}
       - POSTGRES_HOST_AUTH_METHOD=trust
+      - OTEL_SERVICE_NAME=quiz-postgres
+      - OTEL_SERVICE_VERSION=${OPEN_TELEMETRY_SERVICE_VERSION:-${APP_VERSION:-dev}}
     ports:
       - "5432:5432"
     volumes:
@@ -84,6 +86,8 @@ services:
       - EMAIL_DAILY_REMINDER_ENABLED=${EMAIL_DAILY_REMINDER_ENABLED:-true}
       - EMAIL_DAILY_REMINDER_HOUR=${EMAIL_DAILY_REMINDER_HOUR:-9}
       - SERVER_APP_BASE_URL=${SERVER_APP_BASE_URL:-http://localhost:3000}
+      - OTEL_SERVICE_NAME=quiz-worker
+      - OTEL_SERVICE_VERSION=${OPEN_TELEMETRY_SERVICE_VERSION:-${APP_VERSION:-prod}}
     healthcheck:
       test:
         [
@@ -181,6 +185,9 @@ services:
       #   - type=local,dest=/tmp/.buildx-cache-frontend-new,mode=max
       x-bake:
         provenance: false
+    environment:
+      - OTEL_SERVICE_NAME=quiz-frontend
+      - OTEL_SERVICE_VERSION=${OPEN_TELEMETRY_SERVICE_VERSION:-${APP_VERSION:-dev}}
     env_file:
       - .env
     ports:
@@ -232,7 +239,8 @@ services:
       EXPAND_API: ${TTS_EXPAND_API:-True}
       DETAILED_ERROR_LOGGING: ${TTS_DETAILED_ERROR_LOGGING:-True}
       DEBUG_STREAMING: ${DEBUG_STREAMING:-False}
-
+      OTEL_SERVICE_NAME: quiz-tts
+      OTEL_SERVICE_VERSION: ${OPEN_TELEMETRY_SERVICE_VERSION:-${APP_VERSION:-dev}}
 volumes:
   postgres_prod_data:
 
