needs mroe cleanup

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -76,6 +76,7 @@ services:
       - OTEL_SEMCONV_STABILITY_OPT_IN=http/dup
       - SERVER_APP_BASE_URL=${SERVER_APP_BASE_URL:-http://localhost:3000}
       - OTEL_SERVICE_NAME=quiz-backend
+      - OPEN_TELEMETRY_SERVICE_VERSION=${OPEN_TELEMETRY_SERVICE_VERSION:-${APP_VERSION:-prod}}
       - OTEL_SERVICE_VERSION=${OPEN_TELEMETRY_SERVICE_VERSION:-${APP_VERSION:-prod}}
       - OTEL_EXPORTER_OTLP_TRACES_ENDPOINT=${OPEN_TELEMETRY_ENDPOINT:-otel-collector:4317}
     healthcheck:
@@ -136,6 +137,7 @@ services:
       - EMAIL_DAILY_REMINDER_HOUR=${EMAIL_DAILY_REMINDER_HOUR:-9}
       - OTEL_SEMCONV_STABILITY_OPT_IN=http/dup
       - OTEL_SERVICE_NAME=quiz-worker
+      - OPEN_TELEMETRY_SERVICE_VERSION=${OPEN_TELEMETRY_SERVICE_VERSION:-${APP_VERSION:-prod}}
       - OTEL_SERVICE_VERSION=${OPEN_TELEMETRY_SERVICE_VERSION:-${APP_VERSION:-prod}}
       - OTEL_EXPORTER_OTLP_TRACES_ENDPOINT=${OPEN_TELEMETRY_ENDPOINT:-otel-collector:4317}
     healthcheck:
