--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -119,6 +119,7 @@ services:
       - MIGRATIONS_PATH=file:///app/migrations
       - OPEN_TELEMETRY_ENDPOINT=${OPEN_TELEMETRY_ENDPOINT:-otel-collector:4317}
       - OPEN_TELEMETRY_SERVICE_NAME=${OPEN_TELEMETRY_SERVICE_NAME:-quiz-worker}
+      - OPEN_TELEMETRY_SERVICE_VERSION=${OPEN_TELEMETRY_SERVICE_VERSION:-${APP_VERSION:-prod}}
       - OPEN_TELEMETRY_PROTOCOL=${OPEN_TELEMETRY_PROTOCOL:-grpc}
       - OPEN_TELEMETRY_INSECURE=${OPEN_TELEMETRY_INSECURE:-true}
       - OPEN_TELEMETRY_ENABLE_TRACING=${OPEN_TELEMETRY_ENABLE_TRACING:-true}
@@ -165,6 +166,7 @@ services:
     restart: unless-stopped
     environment:
       OTEL_SERVICE_NAME: "quiz-nginx"
+      OPEN_TELEMETRY_SERVICE_VERSION: ${OPEN_TELEMETRY_SERVICE_VERSION:-${APP_VERSION:-prod}}
       OTEL_RESOURCE_ATTRIBUTES: service.version=${OPEN_TELEMETRY_SERVICE_VERSION:-${APP_VERSION:-prod}}
     env_file:
       - .env
