--- a/nginx.conf
+++ b/nginx.conf
@@ -388,5 +388,6 @@ http {
     }
     otel_trace on;
     otel_service_name quiz-nginx;
+    otel_resource_attr service.version prod;
     otel_trace_context propagate;
 }
