--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD:-quiz_password}
       - POSTGRES_HOST_AUTH_METHOD=trust
       - OTEL_SERVICE_NAME=quiz-postgres
-      - OTEL_RESOURCE_ATTRIBUTES=service.version=${OPEN_TELEMETRY_SERVICE_VERSION:-${APP_VERSION:-dev}}
+      - OTEL_RESOURCE_ATTRIBUTES=service.version=${OPEN_TELEMETRY_SERVICE_VERSION:-${IMAGE_TAG:-latest}}
     ports:
       - "5432:5432"
     volumes:
@@ -67,6 +67,7 @@ services:
       - OPEN_TELEMETRY_ENDPOINT=${OPEN_TELEMETRY_ENDPOINT:-otel-collector:4317}
       - OPEN_TELEMETRY_SERVICE_NAME=${OPEN_TELEMETRY_SERVICE_NAME:-quiz-backend}
       - OPEN_TELEMETRY_SERVICE_VERSION=${OPEN_TELEMETRY_SERVICE_VERSION:-${APP_VERSION:-dev}}
+      - OTEL_RESOURCE_ATTRIBUTES=service.version=${OPEN_TELEMETRY_SERVICE_VERSION:-${IMAGE_TAG:-latest}}
       - OPEN_TELEMETRY_PROTOCOL=${OPEN_TELEMETRY_PROTOCOL:-grpc}
       - OPEN_TELEMETRY_INSECURE=${OPEN_TELEMETRY_INSECURE:-true}
       - OPEN_TELEMETRY_ENABLE_TRACING=${OPEN_TELEMETRY_ENABLE_TRACING:-true}
@@ -87,7 +88,6 @@ services:
       - EMAIL_DAILY_REMINDER_HOUR=${EMAIL_DAILY_REMINDER_HOUR:-9}
       - SERVER_APP_BASE_URL=${SERVER_APP_BASE_URL:-http://localhost:3000}
       - OTEL_SERVICE_NAME=quiz-worker
-      - OTEL_RESOURCE_ATTRIBUTES=service.version=${OPEN_TELEMETRY_SERVICE_VERSION:-${APP_VERSION:-dev}}
     healthcheck:
       test:
         [
@@ -134,7 +134,8 @@ services:
       - MIGRATIONS_PATH=file:///app/migrations
       - OPEN_TELEMETRY_ENDPOINT=${OPEN_TELEMETRY_ENDPOINT:-otel-collector:4317}
       - OPEN_TELEMETRY_SERVICE_NAME=${OPEN_TELEMETRY_SERVICE_NAME:-quiz-worker}
-      - OPEN_TELEMETRY_SERVICE_VERSION=${OPEN_TELEMETRY_SERVICE_VERSION:-${APP_VERSION:-dev}}
+      - OPEN_TELEMETRY_SERVICE_VERSION=${OPEN_TELEMETRY_SERVICE_VERSION:-${IMAGE_TAG:-latest}}
+      - OTEL_RESOURCE_ATTRIBUTES=service.version=${OPEN_TELEMETRY_SERVICE_VERSION:-${IMAGE_TAG:-latest}}
       - OPEN_TELEMETRY_PROTOCOL=${OPEN_TELEMETRY_PROTOCOL:-grpc}
       - OPEN_TELEMETRY_INSECURE=${OPEN_TELEMETRY_INSECURE:-true}
       - OPEN_TELEMETRY_ENABLE_TRACING=${OPEN_TELEMETRY_ENABLE_TRACING:-true}
@@ -187,7 +188,7 @@ services:
         provenance: false
     environment:
       - OTEL_SERVICE_NAME=quiz-frontend
-      - OTEL_RESOURCE_ATTRIBUTES=service.version=${OPEN_TELEMETRY_SERVICE_VERSION:-${APP_VERSION:-dev}}
+      - OTEL_RESOURCE_ATTRIBUTES=service.version=${OPEN_TELEMETRY_SERVICE_VERSION:-${IMAGE_TAG:-latest}}
     env_file:
       - .env
     ports:
@@ -240,7 +241,7 @@ services:
       DETAILED_ERROR_LOGGING: ${TTS_DETAILED_ERROR_LOGGING:-True}
       DEBUG_STREAMING: ${DEBUG_STREAMING:-False}
       OTEL_SERVICE_NAME: quiz-tts
-      OTEL_RESOURCE_ATTRIBUTES: service.version=${OPEN_TELEMETRY_SERVICE_VERSION:-${APP_VERSION:-dev}}
+      OTEL_RESOURCE_ATTRIBUTES: service.version=${OPEN_TELEMETRY_SERVICE_VERSION:-${IMAGE_TAG:-latest}}
 volumes:
   postgres_prod_data:
 
