--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -9,7 +9,7 @@ services:
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD:-quiz_password}
       - POSTGRES_HOST_AUTH_METHOD=trust
       - OTEL_SERVICE_NAME=quiz-postgres
-      - OTEL_RESOURCE_ATTRIBUTES=service.version=${OPEN_TELEMETRY_SERVICE_VERSION:-${APP_VERSION:-prod}}
+      - OTEL_RESOURCE_ATTRIBUTES=service.version=${OPEN_TELEMETRY_SERVICE_VERSION:-${IMAGE_TAG:-latest}}
     ports:
       - "5432:5432"
     restart: unless-stopped
@@ -76,8 +76,8 @@ services:
       - OTEL_SEMCONV_STABILITY_OPT_IN=http/dup
       - SERVER_APP_BASE_URL=${SERVER_APP_BASE_URL:-http://localhost:3000}
       - OTEL_SERVICE_NAME=quiz-backend
-      - OPEN_TELEMETRY_SERVICE_VERSION=${OPEN_TELEMETRY_SERVICE_VERSION:-${APP_VERSION:-prod}}
-      - OTEL_RESOURCE_ATTRIBUTES=service.version=${OPEN_TELEMETRY_SERVICE_VERSION:-${APP_VERSION:-prod}}
+      - OPEN_TELEMETRY_SERVICE_VERSION=${OPEN_TELEMETRY_SERVICE_VERSION:-${IMAGE_TAG:-latest}}
+      - OTEL_RESOURCE_ATTRIBUTES=service.version=${OPEN_TELEMETRY_SERVICE_VERSION:-${IMAGE_TAG:-latest}}
       - OTEL_EXPORTER_OTLP_TRACES_ENDPOINT=${OPEN_TELEMETRY_ENDPOINT:-otel-collector:4317}
     healthcheck:
       test:
@@ -119,7 +119,6 @@ services:
       - MIGRATIONS_PATH=file:///app/migrations
       - OPEN_TELEMETRY_ENDPOINT=${OPEN_TELEMETRY_ENDPOINT:-otel-collector:4317}
       - OPEN_TELEMETRY_SERVICE_NAME=${OPEN_TELEMETRY_SERVICE_NAME:-quiz-worker}
-      - OPEN_TELEMETRY_SERVICE_VERSION=${OPEN_TELEMETRY_SERVICE_VERSION:-${APP_VERSION:-prod}}
       - OPEN_TELEMETRY_PROTOCOL=${OPEN_TELEMETRY_PROTOCOL:-grpc}
       - OPEN_TELEMETRY_INSECURE=${OPEN_TELEMETRY_INSECURE:-true}
       - OPEN_TELEMETRY_ENABLE_TRACING=${OPEN_TELEMETRY_ENABLE_TRACING:-true}
@@ -127,6 +126,11 @@ services:
       - OPEN_TELEMETRY_ENABLE_LOGGING=${OPEN_TELEMETRY_ENABLE_LOGGING:-true}
       - OPEN_TELEMETRY_SAMPLING_RATE=${OPEN_TELEMETRY_SAMPLING_RATE:-1.0}
       - OPEN_TELEMETRY_USE_AUTO_SDK=${OPEN_TELEMETRY_USE_AUTO_SDK:-false}
+      - OTEL_SEMCONV_STABILITY_OPT_IN=http/dup
+      - OTEL_SERVICE_NAME=quiz-worker
+      - OPEN_TELEMETRY_SERVICE_VERSION=${OPEN_TELEMETRY_SERVICE_VERSION:-${IMAGE_TAG:-latest}}
+      - OTEL_RESOURCE_ATTRIBUTES=service.version=${OPEN_TELEMETRY_SERVICE_VERSION:-${IMAGE_TAG:-latest}}
+      - OTEL_EXPORTER_OTLP_TRACES_ENDPOINT=${OPEN_TELEMETRY_ENDPOINT:-otel-collector:4317}
       - EMAIL_ENABLED=${EMAIL_ENABLED:-true}
       - EMAIL_SMTP_HOST=${EMAIL_SMTP_HOST:-smtp.email.us-chicago-1.oci.oraclecloud.com}
       - EMAIL_SMTP_PORT=${EMAIL_SMTP_PORT:-587}
@@ -136,10 +140,6 @@ services:
       - EMAIL_FROM_NAME=${EMAIL_FROM_NAME:-Quiz App}
       - EMAIL_DAILY_REMINDER_ENABLED=${EMAIL_DAILY_REMINDER_ENABLED:-true}
       - EMAIL_DAILY_REMINDER_HOUR=${EMAIL_DAILY_REMINDER_HOUR:-9}
-      - OTEL_SEMCONV_STABILITY_OPT_IN=http/dup
-      - OTEL_SERVICE_NAME=quiz-worker
-      - OTEL_RESOURCE_ATTRIBUTES=service.version=${OPEN_TELEMETRY_SERVICE_VERSION:-${APP_VERSION:-prod}}
-      - OTEL_EXPORTER_OTLP_TRACES_ENDPOINT=${OPEN_TELEMETRY_ENDPOINT:-otel-collector:4317}
     healthcheck:
       test:
         [
@@ -166,8 +166,8 @@ services:
     restart: unless-stopped
     environment:
       OTEL_SERVICE_NAME: "quiz-nginx"
-      OPEN_TELEMETRY_SERVICE_VERSION: ${OPEN_TELEMETRY_SERVICE_VERSION:-${APP_VERSION:-prod}}
-      OTEL_RESOURCE_ATTRIBUTES: service.version=${OPEN_TELEMETRY_SERVICE_VERSION:-${APP_VERSION:-prod}}
+      OPEN_TELEMETRY_SERVICE_VERSION: ${OPEN_TELEMETRY_SERVICE_VERSION:-${IMAGE_TAG:-latest}}
+      OTEL_RESOURCE_ATTRIBUTES: service.version=${OPEN_TELEMETRY_SERVICE_VERSION:-${IMAGE_TAG:-latest}}
     env_file:
       - .env
     healthcheck:
@@ -214,7 +214,7 @@ services:
       DETAILED_ERROR_LOGGING: ${TTS_DETAILED_ERROR_LOGGING:-True}
       DEBUG_STREAMING: ${DEBUG_STREAMING:-false}
       OTEL_SERVICE_NAME: "quiz-tts"
-      OTEL_RESOURCE_ATTRIBUTES: service.version=${OPEN_TELEMETRY_SERVICE_VERSION:-${APP_VERSION:-prod}}
+      OTEL_RESOURCE_ATTRIBUTES: service.version=${OPEN_TELEMETRY_SERVICE_VERSION:-${IMAGE_TAG:-latest}}
       OTEL_TRACES_EXPORTER: "otlp"
       OTEL_METRICS_EXPORTER: "otlp"
       OTEL_EXPORTER_OTLP_TRACES_ENDPOINT: ${OPEN_TELEMETRY_ENDPOINT:-otel-collector:4317}
