--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -214,7 +214,7 @@ services:
       DETAILED_ERROR_LOGGING: ${TTS_DETAILED_ERROR_LOGGING:-True}
       DEBUG_STREAMING: ${DEBUG_STREAMING:-false}
       OTEL_SERVICE_NAME: "quiz-tts"
-      OTEL_RESOURCE_ATTRIBUTES: service.version=${OPEN_TELEMETRY_SERVICE_VERSION:-${IMAGE_TAG:-latest}}
+      OTEL_RESOURCE_ATTRIBUTES: service.version=latest
       OTEL_TRACES_EXPORTER: "otlp"
       OTEL_METRICS_EXPORTER: "otlp"
       OTEL_EXPORTER_OTLP_TRACES_ENDPOINT: ${OPEN_TELEMETRY_ENDPOINT:-otel-collector:4317}
