--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -52,6 +52,7 @@ services:
       - GOOGLE_OAUTH_CLIENT_ID=${GOOGLE_OAUTH_CLIENT_ID}
       - GOOGLE_OAUTH_CLIENT_SECRET=${GOOGLE_OAUTH_CLIENT_SECRET}
       - GOOGLE_OAUTH_REDIRECT_URL=${GOOGLE_OAUTH_REDIRECT_URL:-http://localhost:3000/oauth-callback}
+      - GOOGLE_OAUTH_IOS_CLIENT_ID=${GOOGLE_OAUTH_IOS_CLIENT_ID:-}
       - QUIZ_CONFIG_FILE=/app/merged.config.yaml
       - MIGRATIONS_PATH=file:///app/migrations
       - OPEN_TELEMETRY_ENDPOINT=${OPEN_TELEMETRY_ENDPOINT:-otel-collector:4317}
